# aws_cdk_python_demo

./: .gitignore  Makefile  README.md  app.py  cdk.json  pyproject.toml
infrastructure/: component.py  constants.py  lambdas.py  monitoring.py  utils.py
infrastructure/basic_lambda/: construct.py
service/handlers/: demo_lambda.py
service/logic/: data.py
service/models/: input.py  users.py
tests/infrastructure/: test_cdk.py
tests/service/: test_base_lambda_function.py  utils.py
